--- a/index.html
+++ b/index.html
@@ -31,9 +31,12 @@
   <div>
 
     <div id="DivSetQlt">
-      <button id="startRecButton" style="width: 90%; height: 2rem;" disabled>Start and Record</button>
+      <button id="startRecButton" style="width: 90%; height: 2rem;" onclick="StartRec()">Start and Record</button>
       <br>
-      <button id="startButton" style="width: 90%; height: 2rem;" disabled>Start Mirror</button>
+      <button id="startMirrorButton" style="width: 90%; height: 2rem;" onclick="StartMirror()">Start Mirror</button>
+      <br>
+      <button id="startMirrorRecButton" style="width: 90%; height: 2rem;" onclick="StartMirrorRec()">Start Mirror and
+        Record</button>
       <br>
       <br>
       <br>
