--- a/mirror/viewer.html
+++ b/mirror/viewer.html
@@ -11,12 +11,8 @@
 <body style="margin:0px">
     <canvas id="MidCanvas"></canvas>
     <br>
-    <br>
-    <br>
-    <h2>----</h2>
-    <br>
 
-    <video id="Viewer" style="width: 40%; height: 40%;" controls autoplay playsinline preload="auto"></video>
+    <video id="Viewer" style="width: 100%;" controls autoplay playsinline preload="auto"></video>
     <script src="viewer.js"></script>
 
 
