Audio Recoding fixes Args and help Codecs (Host and Guest both) Video formats Chunk Finalizing++ sh instead of bash -removed mirror

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <div id="DivVdo">
 
-    <video id="gum-local" style="width: 90%" autoplay playsinline controls></video>
+    <video id="gum-local" style="width: 90%" autoplay playsinline controls muted></video>
   </div>
 
 
@@ -76,14 +76,6 @@
                 <button class="btn"
                   style="height:5rem;width:5rem;padding-top:1rem; border-radius: 40%; background-color: #e34433; margin: 0.5rem ;"
                   id="startRecButton" onclick="StartRec()">Record</button>
-
-                <button class="btn"
-                  style="height:5rem;width:5rem;padding-top:1rem; border-radius: 10%; background-color: #086359 ; margin: 0.5rem ;"
-                  id="startRecButton" onclick="StartMirror()">Mirror</button>
-
-                <button class="btn"
-                  style="height:5rem;width:10rem; border-radius:20% ;  background-color: #918810; margin: 0.5rem ;"
-                  id="startRecButton" onclick="StartMirrorRec()">Record and Mirror</button>
               </center>
             </div>
           </td>
