--- a/404.html
+++ b/404.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta http-equiv="refresh" content="0; url='/index.html'" />
-</head>
-<body>
-</body>
+    <head>
+        <meta http-equiv="refresh" content="0; url='/index.html'" />
+    </head>
+    <body>
+        <h1>Oops!</h1>
+        <p>It looks like there's nothing here! Perhaps you were looking for the<a href="../index.html">homepage</a>?</p>
+    </body>
 </html>
